--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,16 @@ dependencies:
     sdk: flutter
   flutter_date_pickers: ^0.4.3
   http: ^1.2.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  # flutter_icons:
+  #   image_path: "icons/playstore.png"
+  #   android: true
+  #   iso: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
