--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,13 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
+     def keystoreProperties = new Properties()
+    def keystorePropertiesFile = rootProject.file('key.properties')
+    if (keystorePropertiesFile.exists()) {
+       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   }
+
+ 
 android {
     namespace = "com.example.food_preorder_app"
     compileSdk = flutter.compileSdkVersion
@@ -35,7 +42,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.food_preorder_app"
+        applicationId = "com.iva.food_preorder_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
@@ -44,14 +51,31 @@ android {
         versionName = flutterVersionName
     }
 
-    buildTypes {
+   signingConfigs {
+           release {
+              keyAlias keystoreProperties['keyAlias']
+               keyPassword keystoreProperties['keyPassword']
+               storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+               storePassword keystoreProperties['storePassword']
+           }
+       }
+        buildTypes {
+        //    release {
+        //       // TODO: Add your own signing config for the release build.
+        //       // Signing with the debug keys for now,
+        //       // so `flutter run --release` works.
+        //         //signingConfig signingConfigs.debug
+        //         signingConfig signingConfigs.release
+                
+        //    }
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-           
-            signingConfig = signingConfigs.debug
-        }
+        //signingConfig signingConfigs.release
+        signingConfig signingConfigs.debug
+        minifyEnabled false
+        shrinkResources false
+        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
+        }
 }
 
 flutter {
