added auto logging feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "fluttermaterials"
+        "fluttermaterials",
+        "isloggedin"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
 }
