--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_date_pickers: ^0.4.3
   http: ^1.2.1
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
